{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 257,
  "lineage": "6aeada3a-37e0-175b-27ca-baa97b2e2e28",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ece8f66a7770f704",
            "arn": "arn:aws:ec2:us-east-1:652954331842:instance/i-05a97936a699cf028",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a97936a699cf028",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "asamples",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009e5ca967c459f25",
            "private_dns": "ip-10-0-101-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.66",
            "public_dns": "ec2-34-233-71-246.compute-1.amazonaws.com",
            "public_ip": "34.233.71.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-04dc76677a35e2cf0",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e566258507954057",
            "tags": {
              "Name": "k8s-node",
              "proj": "cka-review"
            },
            "tags_all": {
              "Name": "k8s-node",
              "proj": "cka-review"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb34e51a3718d859"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:security-group/sg-0bb34e51a3718d859",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb34e51a3718d859",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "652954331842",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "test",
              "proj": "k8s-node",
              "terraform": "true"
            },
            "tags_all": {
              "env": "test",
              "proj": "k8s-node",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:network-acl/acl-0fc7b2b5a26d4f260",
            "default_network_acl_id": "acl-0fc7b2b5a26d4f260",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fc7b2b5a26d4f260",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "652954331842",
            "subnet_ids": [
              "subnet-02e1576216c430e68",
              "subnet-04bcf4b568ffad1f6",
              "subnet-075d13878e36fc5fe",
              "subnet-0887d4c01b450983c",
              "subnet-0b82b02e487712ea2",
              "subnet-0e566258507954057"
            ],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:route-table/rtb-0f01f444825c0906f",
            "default_route_table_id": "rtb-0f01f444825c0906f",
            "id": "rtb-0f01f444825c0906f",
            "owner_id": "652954331842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:security-group/sg-030a4f4f2658d7601",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-030a4f4f2658d7601",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "652954331842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-default",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:internet-gateway/igw-0c5fe139fabf43375",
            "id": "igw-0c5fe139fabf43375",
            "owner_id": "652954331842",
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c5fe139fabf43375",
            "id": "r-rtb-0a2de1e46aa4cd7511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2de1e46aa4cd751",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:route-table/rtb-0ba8090ed313b3bf5",
            "id": "rtb-0ba8090ed313b3bf5",
            "owner_id": "652954331842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1a",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1a",
              "Owner": "irvnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:route-table/rtb-09497f4e3e226b195",
            "id": "rtb-09497f4e3e226b195",
            "owner_id": "652954331842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1b",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1b",
              "Owner": "irvnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:route-table/rtb-043bb1c52dec8aa7b",
            "id": "rtb-043bb1c52dec8aa7b",
            "owner_id": "652954331842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1c",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1c",
              "Owner": "irvnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:route-table/rtb-0a2de1e46aa4cd751",
            "id": "rtb-0a2de1e46aa4cd751",
            "owner_id": "652954331842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5fe139fabf43375",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-public",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-public",
              "Owner": "irvnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b66bce0798265e4c",
            "route_table_id": "rtb-0ba8090ed313b3bf5",
            "subnet_id": "subnet-02e1576216c430e68"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047941a0a78516f4c",
            "route_table_id": "rtb-09497f4e3e226b195",
            "subnet_id": "subnet-075d13878e36fc5fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bcd54fc35dd2d29",
            "route_table_id": "rtb-043bb1c52dec8aa7b",
            "subnet_id": "subnet-0887d4c01b450983c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026d6da1c76a025b9",
            "route_table_id": "rtb-0a2de1e46aa4cd751",
            "subnet_id": "subnet-0e566258507954057"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02027b4e038984c3e",
            "route_table_id": "rtb-0a2de1e46aa4cd751",
            "subnet_id": "subnet-0b82b02e487712ea2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbad07ddaf939c6c",
            "route_table_id": "rtb-0a2de1e46aa4cd751",
            "subnet_id": "subnet-04bcf4b568ffad1f6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-02e1576216c430e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e1576216c430e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1a",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1a",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-075d13878e36fc5fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d13878e36fc5fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1b",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1b",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-0887d4c01b450983c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0887d4c01b450983c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1c",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "base-network-private-us-east-1c",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-0e566258507954057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e566258507954057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-0b82b02e487712ea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b82b02e487712ea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:subnet/subnet-04bcf4b568ffad1f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bcf4b568ffad1f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "652954331842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "Public Subnet",
              "Owner": "irvnet"
            },
            "vpc_id": "vpc-0500d96bedf2f076d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652954331842:vpc/vpc-0500d96bedf2f076d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc7b2b5a26d4f260",
            "default_route_table_id": "rtb-0f01f444825c0906f",
            "default_security_group_id": "sg-030a4f4f2658d7601",
            "dhcp_options_id": "dopt-3d46bc5a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0500d96bedf2f076d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f01f444825c0906f",
            "owner_id": "652954331842",
            "tags": {
              "Environment": "cka-test",
              "Name": "k8s dev Environment",
              "Owner": "irvnet"
            },
            "tags_all": {
              "Environment": "cka-test",
              "Name": "k8s dev Environment",
              "Owner": "irvnet"
            }
          }
        }
      ]
    }
  ]
}